--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -36,7 +36,12 @@
                             <items-per-page
                                 template="#vue-items-per-page"
                                 :pagination-values="{{ searchOptions.itemsPerPage | json_encode }}"></items-per-page>
-                            <item-filter-list :facet-data="{{ facets | json_encode }}"></item-filter-list>
+                            {% set overrideSearchFilters = LayoutContainer.show("Ceres::Search.Filter") %}
+                            {% if overrideSearchFilters | trim is empty %}
+                                <item-filter-list :facet-data="{{ facets | json_encode }}"></item-filter-list>
+                            {% else %}
+                                {{ overrideSearchFilters }}
+                            {% endif %}
                         </div>
                     </div>
                 </div>
