--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -48,9 +48,9 @@
     {% endif %}
 
     {% if pushCurrentSlide %}
-    
+        {{ Twig.if("slide.name is not empty") }}
         {{ Twig.set("slides", "slides | merge([slide])") }}
-
+        {{ Twig.endif() }}
     {% endif %}
 
 {% endfor %}
@@ -71,13 +71,13 @@
         <div class="carousel-inner" role="listbox">
             {{ Twig.for("slide", "slides") }}
             <div class="carousel-item{{ Twig.if("loop.first") }} active{{ Twig.endif() }}">
-                <a {{ Twig.if("slide.url is defined") }}href="{{ Twig.print("slide.url") }}"{{ Twig.endif() }}>
+                <a {{ Twig.if("slide.url is not empty") }}href="{{ Twig.print("slide.url") }}"{{ Twig.endif() }}>
 
-                    {{ Twig.if("slide.imageUrl is defined") }}
+                    {{ Twig.if("slide.imageUrl is not empty") }}
                         <img src="{{ Twig.print("slide.imageUrl") }}" alt="{{ Twig.print("slide.name") }}" class="img-cover">
                     {{ Twig.endif() }}
 
-                    {{ Twig.if("slide.name is defined") }}
+                    {{ Twig.if("slide.name is not empty") }}
                     <div class="widget-caption">
                         <h2>
                             <i class="fa fa-angle-double-right" aria-hidden="true"></i> {{ Twig.print("slide.name") }}
