--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -14,6 +14,7 @@
 {{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
 {{ component( "Ceres::Containers.Components.ContainerItemList" ) }}
 {{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+{{ component( "Ceres::PageDesign.Components.Carousel" ) }}
 
 {% if request.get('isContentBuilder') == 1 %}
     {% include "Ceres::Widgets.WidgetComponents" %}
