--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -50,8 +50,9 @@
     {{ Twig.set("title", "'#{ headline }'" ) }}
 {% endif %}
 
-{{ Twig.component( "Ceres::Containers.Components.ContainerItemList" ) }}
+{{ Twig.import("LayoutContainer", "Ceres::PageDesign.Macros.LayoutContainer") }}
 {{ Twig.component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+{{ Twig.component( "Ceres::PageDesign.Components.Carousel" ) }}
 
 <div class="widget widget-item-list widget-{{ widget.settings.appearance.mobile | default('primary') }}">
     <div class="widget-inner">
@@ -78,7 +79,18 @@
 
             <div class="row clearfix">
                 {{ Twig.if("itemList.documents is not empty") }}
-                    <container-item-list :items="{{ Twig.print("itemList.documents | json_encode") }}" :items-per-page="{{ itemsPerPage }}"></container-item-list>
+                    <carousel :items-per-page="{{ itemsPerPage }}">
+                        {{ Twig.for("item", "itemList.documents") }}
+                            <div slot="items">
+                                <category-item
+                                    :item-data="{{ Twig.print("item.data | json_encode") }}"
+                                    :decimal-count="2">
+                                    <template slot="BeforePrices">{{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.BeforePrices", "item.data"])) }}</template>
+                                    <template slot="AfterPrices">{{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.AfterPrices", "item.data"])) }}</template>
+                                </category-item>
+                            </div>
+                        {{ Twig.endfor() }}
+                    </carousel>
                 {{ Twig.endif() }}
             </div>
         {% endif %}
