--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -28,7 +28,7 @@
 
         <div class="home container-max">
             <div class="row">
-                <div class="col clearfix">
+                <div class="w-100">
                     {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
                         {{ content.result|raw }}
                     {% endfor %}
