--- a/resources/views/Widgets/Common/CollapseWidget.twig
+++ b/resources/views/Widgets/Common/CollapseWidget.twig
@@ -8,22 +8,24 @@
     {% set renderContent = true %}
 {% endfor %}
 
-    <div class="widget accordion widget-proportional" id="collapseBox">
+    <div class="accordion widget" id="accordionExample">
+      <div class="widget-inner">
+        {% for collapseBox in collapseBoxes %}
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                {{ collapseBox.headline | raw }}
+              </button>
+            </h5>
+          </div>
 
-    {% for collapseBox in collapseBoxes %}
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              {{ collapseBox.headline | raw }}
-            </button>
-          </h5>
-        </div>
-
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#collapseBox">
-          <div class="card-body">
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body">
               {{ collapseBox.text | raw }}
+            </div>
           </div>
         </div>
       </div>
+    </div>
     {% endfor %}
