--- a/resources/views/Widgets/Common/CollapseWidget.twig
+++ b/resources/views/Widgets/Common/CollapseWidget.twig
@@ -11,8 +11,9 @@
 
     <div class="widget accordion" id="accordion_{{ collapseId }}">
       <div class="widget-inner">
-        {% for collapseBox in collapseBoxes, i in 0..collapseBoxes %}
+        {% for collapseBox in collapseBoxes %}
         <div class="card">
+          {% for i in 0..collapseBoxes %}
           <div class="card-header" id="heading_{{ collapseId }}_{{ i }}">
             <h5 class="mb-0">
               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_{{ collapseId }}_{{ i }}" aria-expanded="true" aria-controls="collapse_{{ collapseId }}_{{ i }}">
@@ -26,6 +27,7 @@
               {{ collapseBox.text | raw }}
             </div>
           </div>
+          {% endfor %}
         </div>
         {% endfor %}
       </div>
