--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupDE.twig
@@ -6,10 +6,13 @@
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('de', 'delivery_address.salutation')" class="col-12 col-sm-4">
-            <div class="input-unit"
-            {% if "delivery_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
+            <div 
+                class="input-unit"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.salutation'), validateType: ''}">
                 <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
-                <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "delivery_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtSalutation' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.salutation')) }
+                </label>
             </div>
         </div>
     </div>
@@ -31,10 +34,14 @@
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('de', 'delivery_address.title')" class="col-12 col-sm-4">
-            <div class="input-unit"
-                {% if "delivery_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
+            <div
+                class="input-unit"
+                data-model="title"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.title'), validateType: 'text'}">>
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)" data-autofocus>
-                <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "delivery_address.title" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTitle' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.title')) }
+                </label>
             </div>
         </div>
 
@@ -64,18 +71,26 @@
         </div>
 
         <div v-if="isInOptionalFields('de', 'delivery_address.name4')" class="col-12 col-sm-4">
-            <div class="input-unit"
-                    {% if "delivery_address.name4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name4">
+            <div
+                class="input-unit"
+                data-model="name4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.name4'), validateType: 'text'}">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
-                <label :for="'txtAdditionalName' + _uid">{{ trans("Ceres::Template.addressAdditionalName") }}{% if "delivery_address.name4" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtAdditionalName' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressAdditionalName") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.name4')) }
+                </label>
             </div>
         </div>
 
         <div v-if="isInOptionalFields('de', 'delivery_address.phoneNumber')" class="col-12 col-sm-4">
-            <div class="input-unit"
-                    {% if "delivery_address.phoneNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="telephone">
+            <div
+                class="input-unit"
+                data-model="telephone"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.phoneNumber'), validateType: 'text'}">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
-                <label :for="'txtTelephone' + _uid">{{ trans("Ceres::Template.addressTelephone") }}{% if "delivery_address.phoneNumber" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTelephone' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.phoneNumber')) }
+                </label>
             </div>
         </div>
     </div>
@@ -111,20 +126,28 @@
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('de', 'delivery_address.address3')" class="col-12 col-sm-6">
-            <div class="input-unit"
-                    {% if "delivery_address.address3" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address3">
+            <div
+                class="input-unit"
+                data-model="address3"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.address3'), validateType: 'text'}">
                 <input type="text" name="decorateAddress" :id="'decorateAddress0' + _uid"
                         :value="value.address3" @input="emitInputEvent('address3', $event.target.value)">
-                <label :for="'decorateAddress0' + _uid">{{ trans("Ceres::Template.addressAdditionalAddress1") }}{% if "delivery_address.address3" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'decorateAddress0' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress1") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.address3')) }
+                </label>
             </div>
         </div>
 
         <div v-if="isInOptionalFields('de', 'delivery_address.address4')" class="col-12 col-sm-6">
-            <div class="input-unit"
-                    {% if "delivery_address.address4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address4">
+            <div
+                class="input-unit"
+                data-model="address4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.address4'), validateType: 'text'}">
                 <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid"
                         :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
-                <label :for="'decorateAddress1' + _uid">{{ trans("Ceres::Template.addressAdditionalAddress2") }}{% if "delivery_address.address4" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'decorateAddress1' + _uid">{{ trans("Ceres::Template.addressAdditionalAddress2") }}
+                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress2") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.address4')) }
+                </label>
             </div>
         </div>
     </div>
