--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
@@ -8,9 +8,11 @@
     <div class="row">
         <div v-if="isInOptionalFields('gb', 'delivery_address.salutation')" class="col-12 col-sm-4">
             <div class="input-unit"
-                {% if "delivery_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.salutation'), validateType: ''}">
                 <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
-                <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "delivery_adress.salutation" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtSalutation' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.salutation')) }
+                </label>
             </div>
         </div>
     </div>
@@ -18,16 +20,14 @@
 
 <div class="col-12">
     <div class="row">
-        {% if "delivery_address.name1" in addressFields %}
-            <div
-                class="col-12 col-sm-6"
-                v-if="(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'delivery_address.name1')">
-                <div class="input-unit" data-validate="text" data-model="name1">
-                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
-                    <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
-                </div>
+        <div
+            class="col-12 col-sm-6"
+            v-if="(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'delivery_address.name1')">
+            <div class="input-unit" data-validate="text" data-model="name1">
+                <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
+                <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
             </div>
-        {% endif %}
+        </div>
     </div>
 </div>
 
@@ -35,10 +35,14 @@
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('gb', 'delivery_address.title')" class="col-12 col-sm-4">
-            <div class="input-unit"
-                    {% if "delivery_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
+            <div
+                class="input-unit"
+                data-model="title"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.title'), validateType: 'text'}">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
-                <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "delivery_address.title" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTitle' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.title')) }
+                </label>
             </div>
         </div>
 
@@ -68,18 +72,26 @@
         </div>
 
         <div v-if="isInOptionalFields('gb', 'delivery_address.name4')" class="col-sm-4">
-            <div class="input-unit"
-                    {% if "delivery_address.name4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name4">
+            <div
+                class="input-unit"
+                data-model="name4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.name4'), validateType: 'text'}">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
-                <label :for="'txtAdditionalName' + _uid">{{ trans("Ceres::Template.addressGBNameAffix") }}{% if "delivery_address.name4" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtAdditionalName' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressGBNameAffix") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.name4')) }
+                </label>
             </div>
         </div>
 
         <div v-if="isInOptionalFields('gb', 'delivery_address.phoneNumber')" class="col-12 col-sm-4">
-            <div class="input-unit"
-                    {% if "delivery_address.phoneNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="telephone">
+            <div
+                class="input-unit"
+                data-model="telephone"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.phoneNumber'), validateType: 'text'}">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
-                <label :for="'txtTelephone' + _uid">{{ trans("Ceres::Template.addressTelephone") }}{% if "delivery_address.phoneNumber" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTelephone' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.phoneNumber')) }
+                </label>
             </div>
         </div>
     </div>
@@ -89,15 +101,19 @@
         <div class="col-12 col-sm-12">
             <div class="input-unit" data-validate="text" data-model="address1">
                 <input type="text" name="street" autocomplete="address-line1" :id="'txtStreet' + _uid" :value="value.address1" @input="emitInputEvent('address1', $event.target.value)">
-                <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressENAddressLine1") }}*
-                </label>
+                <label :for="'txtStreet' + _uid">{{ trans("Ceres::Template.addressENAddressLine1") }}*</label>
             </div>
         </div>
 
         <div v-if="isInOptionalFields('gb', 'delivery_address.address3')" class="col-12 col-sm-12">
-            <div class="input-unit" {% if "delivery_address.address2" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address2">
+            <div
+                class="input-unit"
+                data-model="address2"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.address2'), validateType: 'text'}">
                 <input type="text" name="housenumber" autocomplete="address-line2" :id="'txtNumber' + _uid" :value="value.address2" @input="emitInputEvent('address2', $event.target.value)">
-                <label :for="'txtNumber' + _uid">{{ trans("Ceres::Template.addressENAddressLine2") }}{% if "delivery_address.address2" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtNumber' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressENAddressLine2") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.address2')) }
+                </label>
             </div>
         </div>
     </div>
@@ -106,18 +122,26 @@
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('gb', 'delivery_address.address3')" class="col-12 col-sm-12">
-            <div class="input-unit"
-                    {% if "delivery_address.address3" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address3">
+            <div
+                class="input-unit"
+                data-model="address3"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.address3'), validateType: 'text'}">
                 <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address3" @input="emitInputEvent('address3', $event.target.value)">
-                <label :for="'decorateAddress0' + _uid">{{ trans("Ceres::Template.addressENAddressLine3") }}{% if "delivery_address.address3" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'decorateAddress0' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressENAddressLine3") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.address3')) }
+                </label>
             </div>
         </div>
 
         <div v-if="isInOptionalFields('gb', 'delivery_address.address4')" class="col-12 col-sm-12">
-            <div class="input-unit"
-                    {% if "delivery_address.address4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address4">
-                <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
-                <label :for="'decorateAddress0' + _uid">{{ trans("Ceres::Template.addressENAddressLine4") }}{% if "delivery_address.address4" in addressFieldsRequired %}*{% endif %}</label>
+            <div
+                class="input-unit"
+                data-model="address4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.address4'), validateType: 'text'}">
+                <input type="text" name="buildingName" :id="'decorateAddress1' + _uid" :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
+                <label :for="'decorateAddress1' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressENAddressLine4") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.address4')) }
+                </label>
             </div>
         </div>
     </div>
